--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 // --- Build HTML Card Cache using searchIn as key ---
                 const escapeQuote = (str) => str.replace(/'/g, "\\'");
 
-                const categoriesHTML = recipe.Categories ? recipe.Categories.split(',')
+                const categoriesHTML = recipe.Categories ? recipe.Categories.split(';')
                     .map(cat => `<button onclick="searchByTerm('${escapeQuote(cat.trim())}')" class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 mb-2 px-2.5 py-1.5 rounded-full hover:bg-blue-200 transition-colors duration-200">${cat.trim()}</button>`)
                     .join('') : '<span class="text-sm text-gray-500">None</span>';
 
-                const ingredientsHTML = recipe.Ingredients ? recipe.Ingredients.split(',')
+                const ingredientsHTML = recipe.Ingredients ? recipe.Ingredients.split(';')
                     .map(ing => `<button onclick="searchByTerm('${escapeQuote(ing.trim())}')" class="bg-green-100 text-green-800 text-xs font-semibold mr-2 mb-2 px-2.5 py-1.5 rounded-full hover:bg-green-200 transition-colors duration-200">${ing.trim()}</button>`)
                     .join('') : '<span class="text-sm text-gray-500">Not listed</span>';
 
